--- a/Grid test/MainWindow.xaml
+++ b/Grid test/MainWindow.xaml
@@ -16,6 +16,7 @@
             <Button  Height="50" Content="7" FontSize="30"/>
             <Button  Height="50" Content="8" FontSize="30"/>
             <Button  Height="50" Content="9" FontSize="30"/>
+            <Button  Height="50" Content="10" FontSize="30"/>
         </StackPanel>
         <Button x:Name="btn1" 
         Content="1"
